# EmbeddedSerialFiller

./: .clang-format  .gitignore  Beautifier.bat  Build Command.txt  CMakeLists.txt  EmbeddedSerialFiller.ewp  EmbeddedSerialFiller.pro  LICENSE  README.md  toolchain-ewarm.cmake
examples/: BasicExample.cpp  CMakeLists.txt  ExceptionCheckingExample.cpp
include/: IAR_armv6.h  _esf_no_rtos_abstraction.h  esf_abstraction.h  esf_embos_abstraction.h  esf_freertos_abstraction.h  esf_full_std_support.h  etl_profile.h  gcc_linux_x86.h  msvc_x86.h
include/EmbeddedSerialFiller/: CobsTranscoder.h  Container.h  Definitions.h  EmbeddedSerialFiller.h  EmbeddedSerialFiller_NoRTOS.h  EmbeddedSerialFiller_RTOS.h  Logger.h  Utilities.h
include/SerialFiller/: CobsTranscoder.h  CobsTranscoder.hpp  Definitions.hpp  EmbeddedSerialFiller.h  Logger.hpp  SerialFiller.hpp  SerialFillerHelper.hpp  String.hpp  Utilities.h
src/: CMakeLists.txt  CobsTranscoder.cpp  Crc16Ccitt1021.cpp  EmbeddedSerialFiller.cpp  EmbeddedSerialFiller_NoRTOS.cpp  EmbeddedSerialFiller_RTOS.cpp  Logger.cpp  SerialFiller.cpp  SerialFillerHelper.cpp  Utilities.cpp  esf_embos_abstraction.cpp  esf_freertos_abstraction.cpp
test/: .clang-format  AddAndVerifyCrcTests.cpp  CMakeLists.txt  CallbackTests.cpp  CobsEncodeDecodeTests.cpp  CrcTests.cpp  GiveRxDataExceptionTests.cpp  LoopBackTests.cpp  NoSubscribersTests.cpp  PacketizeTests.cpp  SplitPacketTests.cpp  main.cpp
test/integration/: Node.h  Node.hpp  ThreadSafeQ.h  ThreadSafeQ.hpp  TwoNodeAckTests.cpp
